moved physics classes to specific package